<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/search_selected_country_search_card"
        layout="@layout/search_selected_country_search_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="47dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/buttonsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/tickets_offers_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_selected_country_search_card">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CarouselButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_plus"
                android:text="@string/add_ticket_back" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CarouselButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="24 фев, сб" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CarouselButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:text="@string/tickets_number" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CarouselButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_filters"
                android:text="@string/filters" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tickets_offers_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="@color/grey_1"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsList">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AppText.SemiboldTitle.Title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/direct_flight" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                tools:itemCount="3"
                tools:listitem="@layout/item_tickets_offer">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showAllButton"
        style="@style/ButtonText_1.Italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/show_all_button_background"
        android:gravity="center"
        android:padding="11dp"
        android:text="@string/show_all_tickets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tickets_offers_card" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        app:cardBackgroundColor="@color/grey_2"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showAllButton">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppText.RegularText.Text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/ic_bell"
            android:drawablePadding="2.5dp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/subscription_to_price"
            app:drawableTint="@color/blue" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppText.RegularText.Text_2"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:textOff="Off"
            android:textOn="On" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>